SCRUM-36: Add register user and validations for the fields

--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -8,8 +8,8 @@
 .input-error {
   border-color: #d32f2f !important;
 }
-.login-container {
-  width: 340px;
+.register-container {
+  width: 360px;
   margin: 80px auto;
   padding: 30px;
   background: #f8f8f8;
