--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,8 +9,10 @@
         type="text"
         [(ngModel)]="code"
         name="code"
-        placeholder="Ej: A1001"
+  placeholder="Ej: 2259371"
+        [class.input-error]="codeError"
       />
+      <div *ngIf="codeError" class="error-message">{{ codeError }}</div>
     </div>
 
     <div class="form-group">
@@ -21,7 +23,9 @@
         [(ngModel)]="rol"
         name="rol"
         placeholder="Ej: estudiante"
+        [class.input-error]="rolError"
       />
+      <div *ngIf="rolError" class="error-message">{{ rolError }}</div>
     </div>
 
     <button type="submit" [disabled]="loading">
@@ -30,6 +34,11 @@
 
     <p class="message" [ngClass]="{ error: message.includes('❌'), success: message.includes('✅') }">
       {{ message }}
+    </p>
+
+    <p style="text-align:center; margin-top: 10px;">
+      ¿No tienes cuenta?
+      <a routerLink="/register">Regístrate aquí</a>
     </p>
   </form>
 </div>
