--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,18 +1,17 @@
 <div class="login-container">
   <h2>Iniciar Sesión</h2>
 
-  <form (submit)="login(); $event.preventDefault()">
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="form-group">
       <label for="code">Código de estudiante</label>
       <input
         id="code"
         type="text"
-        [(ngModel)]="code"
-        name="code"
+        formControlName="code"
         placeholder="Ej: 2259371"
-        [class.input-error]="codeError"
+        [class.input-error]="loginForm.get('code')?.invalid && loginForm.get('code')?.touched"
       />
-      <div *ngIf="codeError" class="error-message">{{ codeError }}</div>
+      <app-field-error [control]="loginForm.get('code')"></app-field-error>
     </div>
 
     <div class="form-group">
@@ -20,12 +19,11 @@
       <input
         id="password"
         type="password"
-        [(ngModel)]="password"
-        name="password"
+        formControlName="password"
         placeholder="Contraseña"
-        [class.input-error]="passwordError"
+        [class.input-error]="loginForm.get('password')?.invalid && loginForm.get('password')?.touched"
       />
-      <div *ngIf="passwordError" class="error-message">{{ passwordError }}</div>
+      <app-field-error [control]="loginForm.get('password')"></app-field-error>
     </div>
 
     <button type="submit" [disabled]="loading">
