--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="footer-content">
     <div class="footer-section">
       <div class="footer-brand">
@@ -69,4 +69,4 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
