--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -76,10 +76,10 @@
         <span matListItemTitle>Perfil</span>
       </mat-list-item>
       
-      <mat-list-item routerLink="/settings" routerLinkActive="active" (click)="closeMenuOnMobile()">
+      <!-- <mat-list-item routerLink="/settings" routerLinkActive="active" (click)="closeMenuOnMobile()">
         <mat-icon matListItemIcon>settings</mat-icon>
         <span matListItemTitle>Configuración</span>
-      </mat-list-item>
+      </mat-list-item> -->
       
       <mat-list-item (click)="logout()">
         <mat-icon matListItemIcon>logout</mat-icon>
