--- a/src/app/pages/reservations-admin/schedule-form/schedule-form.component.scss
+++ b/src/app/pages/reservations-admin/schedule-form/schedule-form.component.scss
@@ -16,3 +16,40 @@
   overflow-y: visible;
   border-radius: 16px;
 }
+
+/* Accesibilidad - Clase para lectores de pantalla */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+/* Mejoras de navegación por teclado */
+:host ::ng-deep .mat-form-field input:focus,
+:host ::ng-deep .mat-select:focus {
+  outline: 2px solid #1976d2;
+  outline-offset: 2px;
+}
+
+:host ::ng-deep button:focus-visible {
+  outline: 2px solid #1976d2;
+  outline-offset: 2px;
+  box-shadow: 0 0 0 3px rgba(25, 118, 210, 0.2);
+}
+
+/* Estados de error más claros */
+:host ::ng-deep .mat-form-field.mat-form-field-invalid .mat-form-field-outline-thick {
+  border-width: 3px;
+}
+
+/* Mejor contraste para errores */
+:host ::ng-deep .mat-error {
+  font-weight: 500;
+  font-size: 0.875rem;
+}
